Modifiers on curves/text objects in 2.8 #57972

Closed
opened 2018-11-21 11:32:06 +01:00 by Peter Krauspe · 20 comments

System Information
Win 10 , GTX-1050/80

Blender Version

Broken: 2.80-63150511a29-win64

Short description of error

It seems like there are a couple of issues for text/curve objects with modifiers in 2.8:

1. deforming modifiers

  • I see a TODO comment in `MOD_get_mesh_eval(): /* TODO(sybren): get evaluated mesh from depsgraph once that's properly generated for curves. */

    • @dr.sybren A. Stüvel (sybren) : do you know the status of this?
  • Then for following modifiers:

    • we are asserting BLI_assert(mesh_src->totvert == numVerts);
    • if I remove the assert, the modifiers are actually working seemingly fine for e.g. text objects
    • @mont29: do you know the status of this (are these neccessary only for mesh objects)?
      • Cast
      • Curve
      • Shrinkwrap
      • Smooth
      • Warp

2. generative modifiers on curves not working (basically all of them):

  • Array
  • Bevel (wasnt even there in 2.79)
    • What is the point here? Bevel of surfaces???
  • Build
  • Decimate
  • Mirror
  • Remesh (had bad results in 2.79, but not working at all in 2.8)
  • Screw
  • Solidify
  • I havent looked into the cause of this yet...
  • maybe @mont29 would know right away?

Exact steps for others to reproduce the error

1. e.g. Cast modifier asserts

Add text object
Add cast modifier -> assert

2. e.g. Solidify modifier doesn't increase thickness of text objects in 2.8

Add text object
Add solidify modifier
increase thickness -> text remains flat

**System Information** Win 10 , GTX-1050/80 **Blender Version** Broken: 2.80-63150511a29-win64 **Short description of error** It seems like there are a couple of issues for text/curve objects with modifiers in 2.8: ### 1. deforming modifiers - I see a TODO comment in `MOD_get_mesh_eval(): /* TODO(sybren): get evaluated mesh from depsgraph once that's properly generated for curves. */ - @dr.sybren A. Stüvel (sybren) : do you know the status of this? - Then for following modifiers: - we are asserting BLI_assert(mesh_src->totvert == numVerts); - if I remove the assert, the modifiers are actually working seemingly fine for e.g. text objects - @mont29: do you know the status of this (are these neccessary only for mesh objects)? - - [x] Cast - - [x] Curve - - [x] Shrinkwrap - - [x] Smooth - - [x] Warp ### 2. generative modifiers on curves not working (basically all of them): - [ ] Array - [ ] Bevel (wasnt even there in 2.79) - What is the point here? Bevel of surfaces??? - [ ] Build - [ ] Decimate - [ ] Mirror - [ ] Remesh (had bad results in 2.79, but not working at all in 2.8) - [ ] Screw - [ ] Solidify - I havent looked into the cause of this yet... - maybe @mont29 would know right away? **Exact steps for others to reproduce the error** ### 1. e.g. Cast modifier asserts Add text object Add cast modifier -> assert ### 2. e.g. Solidify modifier doesn't increase thickness of text objects in 2.8 Add text object Add solidify modifier increase thickness -> text remains flat
Author

Added subscriber: @PeterKrauspe

Added subscriber: @PeterKrauspe

#57958 was marked as duplicate of this issue

#57958 was marked as duplicate of this issue
Member

Added subscribers: @mont29, @dr.sybren, @lichtwerk

Added subscribers: @mont29, @dr.sybren, @lichtwerk
Member

We have a similar (curve/modifier related) report in #57958.

Taking a step back, it seems like there are a couple of issues (for text/curve objects):

1. deforming modifiers

  • I see a TODO comment in `MOD_get_mesh_eval(): / TODO(sybren): get evaluated mesh from depsgraph once that's properly generated for curves. **/

  • Then for Cast, Curve, Displace, Shrinkwrap, Smooth, Warp:

    • we are asserting BLI_assert(mesh_src->totvert == numVerts);
    • if I remove the assert, the modifiers are actually working seemingly fine for e.g. text objects
    • @mont29: do you know the status of this (are these neccessary only for mesh objects)?

2. generative modifiers on curves not working (basically all of them):

  • Array
  • Bevel (wasnt even there in 2.79)
  • Build
  • Decimate
  • Mirror
  • Remesh (had bad results in 2.79, but not working at all in 2.8)
  • Screw
  • Solidify
    • I havent looked into the cause of this yet...
    • maybe @mont29 would know right away?
We have a similar (curve/modifier related) report in #57958. Taking a step back, it seems like there are a couple of issues (for text/curve objects): ### 1. deforming modifiers - I see a TODO comment in `MOD_get_mesh_eval(): */* TODO(sybren): get evaluated mesh from depsgraph once that's properly generated for curves. **/ - @dr.sybren : do you know the status of this? - Then for Cast, Curve, Displace, Shrinkwrap, Smooth, Warp: - we are asserting `BLI_assert(mesh_src->totvert == numVerts);` - if I remove the assert, the modifiers are actually working seemingly fine for e.g. text objects - @mont29: do you know the status of this (are these neccessary only for mesh objects)? ### 2. generative modifiers on curves not working (basically all of them): - Array - Bevel (wasnt even there in 2.79) - Build - Decimate - Mirror - Remesh (had bad results in 2.79, but not working at all in 2.8) - Screw - Solidify - I havent looked into the cause of this yet... - maybe @mont29 would know right away?
Philipp Oeser changed title from Solidify modifier doesn't work with text objects in 2.8 to Modifiers on curves/text objects in 2.8 2018-11-21 12:53:10 +01:00
Member

@PeterKrauspe: altered the task description (as it turned out to be a much broader "issue"), hope that's OK.
(This way we can also merge in #57958)

@PeterKrauspe: altered the task description (as it turned out to be a much broader "issue"), hope that's OK. (This way we can also merge in #57958)
Member

Added subscriber: @CultLess

Added subscriber: @CultLess
Author

Yes sure , makes sense .

Yes sure , makes sense .

Thanks

Thanks
Bastien Montagne was assigned by Philipp Oeser 2018-11-21 16:34:21 +01:00
Member

@mont29: before this gets forgotten in the abyss: could you take care of this / have a look (thx in advance - not sure who would be responsible otherwise?)?

@mont29: before this gets forgotten in the abyss: could you take care of this / have a look (thx in advance - not sure who would be responsible otherwise?)?
Member

reg. Bevel on Curves: seems weird, but 75149b429f... [no idea how to use it, or what it is good for... can check tomorrow]

reg. Bevel on Curves: seems weird, but 75149b429f... [no idea how to use it, or what it is good for... can check tomorrow]

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Generative issue is actually a drawing issue (see #58107).

Deforming modifiers shall all now work OK I think, so we can close that one, yeah!

Generative issue is actually a drawing issue (see #58107). Deforming modifiers shall all now work OK I think, so we can close that one, yeah!

Added subscriber: @fclem

Added subscriber: @fclem

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

I've fixed modifier display for curves.

bug_curve_solidify.blend

Seems like all Deforming modifiers are working correctly except the solidify modifier.

I've fixed modifier display for curves. [bug_curve_solidify.blend](https://archive.blender.org/developer/F5953193/bug_curve_solidify.blend) Seems like all Deforming modifiers are working correctly except the solidify modifier.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Solidify is not a deforming modifier, it’s a generative one, would rather have another report for that, that one already had way too many different issues in it!

Solidify is not a deforming modifier, it’s a generative one, would rather have another report for that, that one already had way too many different issues in it!

Added subscriber: @browneggz

Added subscriber: @browneggz

Forgive the necro post, but I wanted to check something before creating a new bug report about it, as all searches seem to lead to this report...

Putting the Array modifier on a Curve and using the 'Object Offset' (without Relative or Constant Offset) causes the arrayed Curve objects to render incorrectly in Cycles (it's correct in EEVEE), as if the wrong transform location/rotation are being used for the offset source object, making them splay/scatter all over the place. The selection outline shows them in the correct place though. It works fine in 2.79 as well.

Is this behaviour because of the above issues mentioned, or something else? Is it worth creating a bug report for it, or will it be fixed later? Cheers.

Forgive the necro post, but I wanted to check something before creating a new bug report about it, as all searches seem to lead to this report... Putting the Array modifier on a Curve and using the 'Object Offset' (without Relative or Constant Offset) causes the arrayed Curve objects to render incorrectly in Cycles (it's correct in EEVEE), as if the wrong transform location/rotation are being used for the offset source object, making them splay/scatter all over the place. The selection outline shows them in the correct place though. It works fine in 2.79 as well. Is this behaviour because of the above issues mentioned, or something else? Is it worth creating a bug report for it, or will it be fixed later? Cheers.

@browneggz Yes, please open a new report, if its working in eevee but not in Cycles it's likely something with cycles itself, and/or our rendering pipeline/API…

@browneggz Yes, please open a new report, if its working in eevee but not in Cycles it's likely something with cycles itself, and/or our rendering pipeline/API…
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57972
No description provided.